--- a/pages/assets/style/style.css
+++ b/pages/assets/style/style.css
@@ -14,12 +14,15 @@
     --input-background: rgba(255, 255, 255, 0.9);
     --placeholder-color: #616161;
     --background-button: #0C70F2;
+    --input-color: #303030;
+    --color-span-required: #E73550;
+    --color-success: #0F7B0F;
 }
 
 #logo img {
     width: 170px;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 20px;
+    margin-left: 25px;
 }
 
 #welcome {
@@ -37,7 +40,7 @@
     padding-bottom: 10px;
 }
 
-#form {
+#div-form {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -45,35 +48,68 @@
 
 }
 
-#form label {
+#div-form label {
     display: block;
     align-items: center;
-    margin-top: 10px;
-    padding-top: 10px;
+    margin-top: 8px;
+    padding-top: 8px;
     padding-bottom: 10px;
 }
 
-#form input {
+#div-form input {
     background-color: var(--input-background);
     border: 1px solid #181818;
     border-radius: 10px;
-    height: 35px;
+    height: 32px;
     padding-left: 10px;
     width: 50vh;
-    color: var(--header-background);
+    color: var(--input-color);
 }
 
-#form::placeholder {
+#div-form::placeholder {
     background-color: var(--placeholder-color);
 }
 
-#form [type="button"] {
+#div-form [type="submit"] {
     background-color: var(--background-button);
+    color: var(--color-text);
     border-radius: 8px;
     width: 100%;
     height: 40px;
     font-weight: 800;
     font-size: 15px;
-    margin-top: 25px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     padding: 10px;
+}
+
+.span-required {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    font-weight: 400;
+    font-size: 10px;
+    margin-right: 10px;
+    color: var(--color-span-required);
+    align-items: flex-end;
+}
+
+.checkRegistration {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    font-weight: 500;
+    font-size: 12px;
+    color: var(--color-span-required);
+}
+
+.success {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    font-weight: 500;
+    font-size: 12px;
+    color: var(--color-success);
 }
